adding responses api for openrouter client.  kinda works but need to fix overly long outputs when using reasoning

--- a/templates/game.html
+++ b/templates/game.html
@@ -81,12 +81,8 @@
                     <span>Est. Tokens: <strong id="modal-tokens"></strong></span>
                 </div>
                 <div class="context-section">
-                    <h4>Prompt</h4>
-                    <div id="modal-prompt" class="context-content"></div>
-                </div>
-                <div class="context-section">
-                    <h4>Response</h4>
-                    <div id="modal-response" class="context-content"></div>
+                    <h4 id="modal-section-title">Prompt</h4>
+                    <div id="modal-content-text" class="context-content"></div>
                 </div>
             </div>
             <div class="modal-footer">
